--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dat.gui": "^0.7.9",
+    "gsap": "^3.10.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "three": "^0.140.2"
@@ -17,6 +18,7 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "vite": "^2.9.7"
+    "vite": "^2.9.7",
+    "vite-plugin-string": "^1.1.2"
   }
 }
